--- a/spring_crud_exc5_name/pom.xml
+++ b/spring_crud_exc5_name/pom.xml
@@ -54,15 +54,19 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		
+		<!-- 入力チェックを利用するための設定 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
 		<!-- JDBCを使用するための設定(ojdbc11.jarを利用するための設定) -->
 		<dependency>
      	<groupId>com.oracle.database.jdbc</groupId>
